@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.program.advanced.launcher" name="Advanced Launcher" version="2.5.1" provider-name="Angelscry">
+<addon id="plugin.program.advanced.launcher" name="Advanced Launcher" version="2.5.3" provider-name="Angelscry">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.simplejson" version="2.0.9"/>
@@ -9,7 +9,7 @@
     </extension>
     <extension point="xbmc.addon.metadata">
         <platform>all</platform>
-        <disclaimer>For XBMC Frodo / Eden / Dharma</disclaimer>
+        <disclaimer>For XBMC Gotham/Frodo/Eden/Dharma</disclaimer>
         <summary lang="de">Beliebige Anwendungen aus XBMC starten.</summary>
         <summary lang="en">Start any applications from XBMC.</summary>
         <summary lang="fr">Lancer n'importer quelle application depuis XBMC.</summary>
